Fix bug in bibliography.bib

--- a/{{cookiecutter.repo_name}}/bibliography.bib
+++ b/{{cookiecutter.repo_name}}/bibliography.bib
@@ -1,5 +1,5 @@
 @article{gelmanBayesianWorkflow2020,
-  title = {Bayesian {{Workflow}}},
+  title = {Bayesian Workflow},
   author = {Gelman, Andrew and Vehtari, Aki and Simpson, Daniel and Margossian, Charles C. and Carpenter, Bob and Yao, Yuling and Kennedy, Lauren and Gabry, Jonah and B{\"u}rkner, Paul-Christian and Modr{\'a}k, Martin},
   year = {2020},
   month = {nov},
