--- a/bibliography.bib
+++ b/bibliography.bib
@@ -116,7 +116,8 @@
   title = {Pytest},
   author = {{pytest developers}},
   year = {2022},
-  url = {https://pypi.org/project/pytest/}
+  url = {https://pypi.org/project/pytest/},
+  doi = {10.1007/978-1-4842-2677-3_5}
 }
 
 @misc{githubdevelopersGitHubActions2022,
