--- a/bibliography.bib
+++ b/bibliography.bib
@@ -147,3 +147,12 @@
   file = {/Users/tedgro/Documents/Reading/Zotero/storage/T8RJ4CCF/Liepe et al. - 2014 - A Framework for Parameter Estimation and Model Sel.pdf}
 }
 
+@misc{Allaire_Quarto_2022,
+  title = {Quarto},
+  author = {Allaire, J.J. and Teague, Charles and Scheidegger, Carlos and Xie, Yihui and Dervieux, Christophe},
+  year = {2022},
+  month = jan,
+  doi = {10.5281/zenodo.5960048},
+  url = {https://github.com/quarto-dev/quarto-cli}
+}
+
